# SHARK-Runtime

./: .gitmodules  CMakeLists.txt
.github/workflows/: build_package.yml  ci.yml  schedule_candidate_release.yml
build_tools/cmake/: iree_check_test.cmake  iree_hal_cts_test_suite.cmake  iree_macros.cmake  iree_python.cmake
build_tools/github_actions/: build_dist.py
build_tools/pkgci/: build_tests_using_package.sh
build_tools/python_deploy/: build_linux_packages.sh  build_macos_packages.sh  build_windows.ps1
build_tools/scripts/: get_latest_green.sh
compiler/: setup.py
compiler/bindings/python/: CMakeLists.txt
docs/developers/debugging/: releases.md
experimental/rocm/: CMakeLists.txt  native_executable.c
experimental/rocm/cts/: CMakeLists.txt
runtime/: setup.py
runtime/bindings/python/: CMakeLists.txt  hal.cc
runtime/src/iree/hal/: CMakeLists.txt  api.h  command_buffer.c  semaphore.c  semaphore.h
testing/: CMakeLists.txt
testing/python/: CMakeLists.txt
testing/python/iree/: testing.py
tests/e2e/collectives/: CMakeLists.txt  collectives_test.py  run_all_modules.py  run_rank.py  run_requirements.txt
tests/e2e/models/mnist_train_test/: CMakeLists.txt  README.md  batch.npz  expected_optimizer_state_after_init.npz  expected_optimizer_state_after_train_step.npz  expected_prediction_after_train_step.npz  generate_test_data.py  generate_test_data_requirements.txt  mnist_train.mlir  (+1 more)
tests/e2e/stablehlo_ops/: CMakeLists.txt
tests/e2e/tosa_ops/: CMakeLists.txt
tests/e2e/vulkan_specific/: unalligned_buffer.py
tests/e2e/xla_ops/: CMakeLists.txt
(+136 files in other folders)
